--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
-  "name": "devconnector",
-  "version": "1.0.0",
-  "description": "SOcial Network for Devs",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server",
-    "server": "nodemon server"
-  },
-  "author": "Cletus",
-  "license": "MIT",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "config": "^3.3.1",
-    "express": "^4.17.1",
-    "express-validator": "^6.4.1",
-    "gravatar": "^1.8.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.13",
-    "request": "^2.88.2"
-  },
-  "devDependencies": {
-    "concurrently": "^5.2.0",
-    "nodemon": "^2.0.3"
-  }
+	"name": "devconnector",
+	"version": "1.0.0",
+	"description": "SOcial Network for Devs",
+	"main": "server.js",
+	"scripts": {
+		"start": "node server",
+		"server": "nodemon server",
+		"client": "npm start --prefix client",
+		"dev": "concurrently \"npm run server\" \"npm run client\""
+	},
+	"author": "Cletus",
+	"license": "MIT",
+	"dependencies": {
+		"bcryptjs": "^2.4.3",
+		"config": "^3.3.1",
+		"express": "^4.17.1",
+		"express-validator": "^6.4.1",
+		"gravatar": "^1.8.0",
+		"jsonwebtoken": "^8.5.1",
+		"mongoose": "^5.9.13",
+		"request": "^2.88.2"
+	},
+	"devDependencies": {
+		"concurrently": "^5.2.0",
+		"nodemon": "^2.0.3"
+	}
 }
