Created Dashboard component & add profile form

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "devconnector",
 	"version": "1.0.0",
-	"description": "SOcial Network for Devs",
+	"description": "Social Network for Devs",
 	"main": "server.js",
 	"scripts": {
 		"start": "node server",
